Update webhook URL to use placeholder instead of actual URL

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 &lt;script&gt;
     window.ChatWidgetConfig = {
         webhook: {
-            url: 'https://n8n.srv833885.hstgr.cloud/webhook/b585c3ef-a838-4d84-b0c9-3f267675627e/chat',
+            url: 'YOUR_PRODUCTION_WEBHOOK_URL',
             route: 'general'
         },
         branding: {
