Update to use CDN-hosted version from GitHub

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
     };
 &lt;/script&gt;
-&lt;script src="./chat-widget.js"&gt;&lt;/script&gt;
+&lt;script src="https://cdn.jsdelivr.net/gh/adrazz-cyber/n8nchatwidget@main/chat-widget.js"&gt;&lt;/script&gt;
         </code></pre>
     </div>
 
@@ -93,6 +93,6 @@
             }
         };
     </script>
-    <script src="./chat-widget.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/adrazz-cyber/n8nchatwidget@main/chat-widget.js"></script>
 </body>
 </html>
